--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,14 +3,5 @@
   "short_name": "stream-messages",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#fff",
-  "theme_color": "#673ab8",
-  "icons": [
-    {
-      "src": "/assets/icon.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ]
+  "orientation": "portrait"
 }
