--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "name": "stream-messages",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "build": "preact build",
+    "build": "preact build --no-sw",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
     "lint": "eslint src"
@@ -15,14 +15,14 @@
   "eslintIgnore": [
     "build/*"
   ],
-  "devDependencies": {
-    "eslint": "^7.17.0",
-    "eslint-config-preact": "^1.1.3",
-    "preact-cli": "^3.0.0",
-    "sirv-cli": "^1.0.3"
-  },
   "dependencies": {
-    "preact": "^10.1.0",
-    "preact-render-to-string": "^5.1.2"
+    "preact": "10.5.13",
+    "preact-render-to-string": "5.1.16"
+  },
+  "devDependencies": {
+    "eslint": "7.22.0",
+    "eslint-config-preact": "1.1.3",
+    "preact-cli": "3.0.5",
+    "sirv-cli": "1.0.11"
   }
 }
