--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build/*"
   ],
   "dependencies": {
+    "framer-motion": "3.10.5",
     "preact": "10.5.13",
     "preact-render-to-string": "5.1.16"
   },
