--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "private": true,
   "name": "stream-messages",
   "version": "0.0.1",
+  "description": "Basic messages OBS overlay",
+  "author": "HiDeoo",
+  "private": true,
   "license": "MIT",
   "scripts": {
     "build": "preact build --no-sw",
@@ -25,5 +27,18 @@
     "eslint-config-preact": "1.1.3",
     "preact-cli": "3.0.5",
     "sirv-cli": "1.0.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HiDeoo/stream-messages",
+    "keywords": [
+      "messages",
+      "OBS",
+      "overlay"
+    ],
+    "bugs": {
+      "url": "https://github.com/HiDeoo/stream-messages/issues"
+    },
+    "homepage": "https://github.com/HiDeoo/stream-messages"
   }
 }
